--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cargo build --frozen --release --all-features
+      run: cargo add colorz && cargo build --frozen --release --all-features
