Misc: Add bin name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "lstodo"
 version = "0.1.0"
 edition = "2021"
 
-
 [dependencies]
 colorz = "1.1.2"
+
+[[bin]]
+name = "lstodo"
+path = "src/main.rs"
